--- a/HTMLCSS/07_TextColourSizing/starter/index.html
+++ b/HTMLCSS/07_TextColourSizing/starter/index.html
@@ -6,7 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QuickLab 07 - Text, Colours and Sizing</title>
     <style>
-        
+    h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2em;
+    } 
+
+    header h1 {
+        text-shadow: 5px 3px hotpink;
+        color: darkblue;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: rgb(200, 200, 200, 1);
+        font-size: 48pt;
+        text-align: center;
+    }
+
+    p.first {
+        text-indent: 30px;
+        color: rgb(255, 0, 0, 0.5);
+        text-align: center;
+    }
+
+    h2, h3 {
+        text-align: right;
+        font-family: 'Courier New', Courier, monospace;
+        background-color: rgba(128, 128, 128, 0.5);
+    }
+
+    p#highlightme {
+        background-color: hsl(45, 100%, 50%, 0.5);
+        line-height: 30px;
+        width: 50%;
+    }
+
+    footer > p {
+        background-color: hsl(330, 100%, 71%);
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
     </style>
 </head>
 <body>
