--- a/HTMLCSS/09_PositioningElements/starter/index.html
+++ b/HTMLCSS/09_PositioningElements/starter/index.html
@@ -6,7 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QuickLab 09 - Positioning Elements</title>
     <style>
-        
+       header, footer {
+        background-color: palevioletred;
+        text-align: center;
+        clear: both;
+       } 
+       
+       nav {
+        width: 100%;
+        height: 46px;
+       }
+
+       nav a {
+        float: left;
+        display: block;
+        color: hsl(242, 100%, 71%);
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+       }
+
+       a:hover {
+        background-color: hsla(300, 100%, 71%, 1);
+        color:black;
+       }
+
+       #row {
+        clear: both;
+       }
+
+       .column {
+        float:left;
+        width: 33.33%;
+        background-color: rgb(244, 174, 223);
+       }
+
     </style>
 </head>
 <body>
