Day 3 end of labs

--- a/HTMLCSS/10_CSSTables/starter/index.html
+++ b/HTMLCSS/10_CSSTables/starter/index.html
@@ -7,7 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QuickLab 10 - Tables and CSS</title>
     <style>
-        
+        table {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+    th, tr {
+        border: 1px solid(black);
+        text-align: left;
+    }
+
+    th {
+        padding: 15px 10px;
+        background-color: pink;
+        color: black;
+    }
+
+    tr {
+        background-color: whitesmoke;
+    }
+
+    tr:hover { background-color: hotpink;
+    }
+
     </style>
 </head>
 
